k8s/Task15&16/kubernets-app/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      tolerations:
      - key: "node"
        operator: "Equal"
        value: "worker"
        effect: "NoSchedule"
      containers:
      - name: nodejs-container
        image: seif7atemmohamed/nodejs-app:v1
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: app-storage
          mountPath: /app/logs
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: mysql-storage-mysql-0
